Center location input container to fix left alignment issue
- Add margin: 0 auto to location_input_container
- Fixes location input being shifted to the left side
- Maintains dropdown positioning while centering the input field

--- a/static/css/ootd.css
+++ b/static/css/ootd.css
@@ -286,6 +286,7 @@
     width: 100%;
     max-width: 500px;
     display: block;
+    margin: 0 auto;
 }
 
 .location_input {
